--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>NASA</title>
+    <title>DC</title>
 </head>
 <body>
     <header>
-        <h1>NASA é boa</h1>
-        <img src="" alt="">
+
+            <h1>  DC Comics  </h1>
+            <img src="imagens/logo.png" alt="logo">
 
     </header>
 
     <main>
-        <p>Site para provar que a Terra não é plana</p>
+        <h3>Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"taget="blank_">aqui</a>. </h3>
+
+        <p><img src="imagens/logo4.png" width="270" height="200" align="left"></p>
+
+        <p><img src="imagens/logo1.png" align="left"></p> 
+        
+        <p><img src="imagens/logo5.png" align="middle"></p>
+
+        
     </main>
 
-
-
     <footer>
-        <p>redes</p>
+        <p>Redes</p>
     </footer>
 
 
