--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <h3>Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"taget="blank_">aqui</a>. </h3>
+        <h3>Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"target="blank_">aqui</a>. </h3>
 
         <p><img src="imagens/logo4.png" width="270" height="200" align="left"></p>
 
