--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <body>
     <header>
 
-            <h1>  DC Comics  </h1>
-            <img src="imagens/logo.png" alt="logo">
+        <h1>  DC Comics  </h1>
+        <img src="imagens/logo.png" alt="logo">
 
     </header>
 
     <main>
-        <h3>Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"target="blank_">aqui</a>. </h3>
+        <h3>A DC Comics é uma editora norte-americana subsidiária da companhia Warner Bros. Discovery situada em Burbank, Califórnia, especializada em histórias em quadrinhos e mídias relacionadas, sendo considerada uma das maiores companhias ligadas a este ramo no mundo. Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"target="blank_">aqui</a>. </h3>
 
         <p><img src="imagens/logo4.png" width="270" height="200" align="left"></p>
 
@@ -24,7 +24,8 @@
     </main>
 
     <footer>
-        <p>Redes</p>
+        <p><a href="https://shop.dc.com/coming-soon/"target="blank_">Loja Proximamente</a></p>
+        <p><img src="imagens/logo6.png"></p>
     </footer>
 
 
