--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <h3>A DC Comics é uma editora norte-americana subsidiária da companhia Warner Bros. Discovery situada em Burbank, Califórnia, especializada em histórias em quadrinhos e mídias relacionadas, sendo considerada uma das maiores companhias ligadas a este ramo no mundo. Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"target="blank_">aqui</a>. </h3>
+        <p>A DC Comics é uma editora norte-americana subsidiária da companhia Warner Bros. Discovery situada em Burbank, Califórnia, especializada em histórias em quadrinhos e mídias relacionadas, sendo considerada uma das maiores companhias ligadas a este ramo no mundo.<br/></p> <p>Os herois mais conhecidos da DC sao o Flash, SuperMan e Batman. E os 3 pertencem a liga da justica. Saiba mais clickando <a href="https://www.dc.com/"target="blank_">aqui</a>.</p>
 
         <p><img src="imagens/logo4.png" width="270" height="200" align="left"></p>
 
